tests/snapshots/compile_file_o_no_all__redex_order.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file_o_no_all/redex_order.hvm
---
@a = (a a)

@b = (a a)

@c = (a a)

@foo = (a d)
  & @a ~ (c d)
  & @b ~ (b c)
  & @c ~ (a b)

@foo2 = c
  & @a ~ (b c)
  & @b ~ (a b)
  & @c ~ (0 a)

@main = a
  & @foo ~ (@foo2 a)
